--- a/jp/index.html
+++ b/jp/index.html
@@ -40,7 +40,7 @@
     <a href="/jp" class="language-link">日本語</a>
     <a href="/it" class="language-link">Italiano</a>
 </div>
-<script src="script.js"></script>
+<script src="/script.js"></script>
 <nav class="nav-list">
     <ul>
         <li><a href="#about">略歴</a></li>
