--- a/ua/index.html
+++ b/ua/index.html
@@ -21,7 +21,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Courier+Prime:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+<!-- <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:wght@100;200;300;400;500;600;700;800;900" rel="stylesheet"> -->
 </head>
 <body>
 
@@ -38,7 +38,7 @@
     <a href="/jp" class="language-link">日本語</a>
     <a href="/it" class="language-link">Italiano</a>
 </div>
-<script src="script.js"></script>
+<script src="/script.js"></script>
 <nav class="nav-list">
     <ul>
         <li><a href="#about">Біографія</a></li>
@@ -65,16 +65,16 @@
                 <p><a target="_blank" href=""><strong style="
                 color: lightgreen;">The Man</strong></a>&nbsp художній фільм &nbsp 2024</p>
 
-                <p><a target="_blank" href="https://www.imdb.com/title/tt18765996"><strong>Osaka</strong></a>&nbsp художній фільм &nbsp 2023</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt23809464"><strong>Following</strong></a>&nbsp художній фільм &nbsp 2023</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt22499822"><strong>Spooked</strong></a>&nbsp художній фільм &nbsp 2022</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt21375000"><strong>Love in the City</strong></a>&nbsp художній фільм &nbsp 2022</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt13588604"><strong>I See Darkness</strong></a>&nbsp художній фільм &nbsp 2022</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt13141604"><strong>The Ritual</strong></a>&nbsp художній фільм &nbsp 2021</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt9193890"><strong>Honey & Wine</strong></a>&nbsp художній фільм &nbsp 2020</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt5374002"><strong>The Job</strong></a>&nbsp художній фільм &nbsp 2017</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt5238824"><strong>Despair</strong></a>&nbsp художній фільм &nbsp 2017</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt5191438"><strong>Outsiders</strong></a>&nbsp художній фільм &nbsp 2015</p>
+                <p><a target="_blank" href="https://www.imdb.com/title/tt18765996"><strong>Осака</strong></a>&nbsp художній фільм &nbsp 2023</p>
+                <p><a target="_blank" href="https://www.imdb.com/title/tt23809464"><strong>Слідкуй</strong></a>&nbsp художній фільм &nbsp 2023</p>
+                <p><a target="_blank" href="https://www.imdb.com/title/tt22499822"><strong>Наляканий</strong></a>&nbsp художній фільм &nbsp 2022</p>
+                <p><a target="_blank" href="https://www.imdb.com/title/tt21375000"><strong>Любов у місті</strong></a>&nbsp художній фільм &nbsp 2022</p>
+                <p><a target="_blank" href="https://www.imdb.com/title/tt13588604"><strong>Я бачу темряву</strong></a>&nbsp художній фільм &nbsp 2022</p>
+                <p><a target="_blank" href="https://www.imdb.com/title/tt13141604"><strong>Ритуал</strong></a>&nbsp художній фільм &nbsp 2021</p>
+                <p><a target="_blank" href="https://www.imdb.com/title/tt9193890"><strong>Мед і вино</strong></a>&nbsp художній фільм &nbsp 2020</p>
+                <p><a target="_blank" href="https://www.imdb.com/title/tt5374002"><strong>Робота</strong></a>&nbsp художній фільм &nbsp 2017</p>
+                <p><a target="_blank" href="https://www.imdb.com/title/tt5238824"><strong>Відчай</strong></a>&nbsp художній фільм &nbsp 2017</p>
+                <p><a target="_blank" href="https://www.imdb.com/title/tt5191438"><strong>Аутсайдери</strong></a>&nbsp художній фільм &nbsp 2015</p>
 
                 <h3>Робота На Телебаченні</h3>
                 <p><a target="_blank" href=""><strong style="
