--- a/index.html
+++ b/index.html
@@ -108,7 +108,10 @@ Followed by numerous successful films, Hank continues to make an impact in the w
 
 </section>
 
-    <footer>
+<!-- Back to Top Button -->
+<button onclick="topFunction()" id="backToTopBtn" title="Go to top">Top</button>
+   
+<footer>
         <h5 class="copyright">Hank Orion © All Rights Reserved</h5>
     </footer>
 
