--- a/ua/index.html
+++ b/ua/index.html
@@ -105,6 +105,10 @@
 
 </section>
 
+<!-- Back to Top Button -->
+<button onclick="topFunction()" id="backToTopBtn" title="Go to top">Вгору</button>
+
+
     <footer>
         <h5 class="copyright">Hank Orion © All Rights Reserved</h5>
     </footer>
