--- a/it/index.html
+++ b/it/index.html
@@ -107,6 +107,10 @@
 
 </section>
 
+<!-- Back to Top Button -->
+<button onclick="topFunction()" id="backToTopBtn" title="Go to top">Inizio</button>
+
+
     <footer>
         <h5 class="copyright">Hank Orion © All Rights Reserved</h5>
     </footer>
