--- a/jp/index.html
+++ b/jp/index.html
@@ -107,6 +107,11 @@
 
 </section>
 
+
+<!-- Back to Top Button -->
+<button onclick="topFunction()" id="backToTopBtn" title="Go to top">トップ</button>
+
+
     <footer>
         <h5 class="copyright">Hank Orion © All Rights Reserved</h5>
     </footer>
