--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@
         <p style="text-align: center; background-color: black; width: fit-content; padding: 10px; color:white; text-shadow: 1px 1px 2px black;">That's a Wrap!</p>
     </div>
 </div>
-<a style="background-color: none; margin-bottom: 40px;" href="index.html">Go Back</a>
+<a style="background-color: none; margin-bottom: 40px;" href="/.">Go Back</a>
 
 
     </section>
