--- a/jp/index.html
+++ b/jp/index.html
@@ -62,25 +62,25 @@
     <section id="work">
                 <h3>映画作品</h3>
                 <p><a target="_blank" href=""><strong style="
-                    color: lightgreen;">Greatest Film Ever Made</strong></a>&nbsp フィルム &nbsp 2024</p>
+                    color: lightgreen;">Greatest Film Ever Made</strong></a>&nbsp 映画 &nbsp 2024</p>
     
                 <p><a target="_blank" href=""><strong style="
-                color: lightgreen;">The Man</strong></a>&nbsp フィルム &nbsp 2024</p>
+                color: lightgreen;">The Man</strong></a>&nbsp 映画 &nbsp 2024</p>
 
-                <p><a target="_blank" href="https://www.imdb.com/title/tt18765996"><strong>Osaka</strong></a>&nbsp フィルム &nbsp 2023</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt23809464"><strong>Following</strong></a>&nbsp フィルム &nbsp 2023</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt22499822"><strong>Spooked</strong></a>&nbsp フィルム &nbsp 2022</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt21375000"><strong>Love in the City</strong></a>&nbsp フィルム &nbsp 2022</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt13588604"><strong>I See Darkness</strong></a>&nbsp フィルム &nbsp 2022</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt13141604"><strong>The Ritual</strong></a>&nbsp フィルム &nbsp 2021</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt9193890"><strong>Honey & Wine</strong></a>&nbsp フィルム &nbsp 2020</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt5374002"><strong>The Job</strong></a>&nbsp フィルム &nbsp 2017</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt5238824"><strong>Despair</strong></a>&nbsp フィルム &nbsp 2017</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt5191438"><strong>Outsiders</strong></a>&nbsp フィルム &nbsp 2015</p>
+                <p><a target="_blank" href="https://www.imdb.com/title/tt18765996"><strong>Osaka</strong></a>&nbsp 映画 &nbsp 2023</p>
+                <p><a target="_blank" href="https://www.imdb.com/title/tt23809464"><strong>Following</strong></a>&nbsp 映画 &nbsp 2023</p>
+                <p><a target="_blank" href="https://www.imdb.com/title/tt22499822"><strong>Spooked</strong></a>&nbsp 映画 &nbsp 2022</p>
+                <p><a target="_blank" href="https://www.imdb.com/title/tt21375000"><strong>Love in the City</strong></a>&nbsp 映画 &nbsp 2022</p>
+                <p><a target="_blank" href="https://www.imdb.com/title/tt13588604"><strong>I See Darkness</strong></a>&nbsp 映画 &nbsp 2022</p>
+                <p><a target="_blank" href="https://www.imdb.com/title/tt13141604"><strong>The Ritual</strong></a>&nbsp 映画 &nbsp 2021</p>
+                <p><a target="_blank" href="https://www.imdb.com/title/tt9193890"><strong>Honey & Wine</strong></a>&nbsp 映画 &nbsp 2020</p>
+                <p><a target="_blank" href="https://www.imdb.com/title/tt5374002"><strong>The Job</strong></a>&nbsp 映画 &nbsp 2017</p>
+                <p><a target="_blank" href="https://www.imdb.com/title/tt5238824"><strong>Despair</strong></a>&nbsp 映画 &nbsp 2017</p>
+                <p><a target="_blank" href="https://www.imdb.com/title/tt5191438"><strong>Outsiders</strong></a>&nbsp 映画 &nbsp 2015</p>
 
-                <h3>TVワーク</h3>
+                <h3>テレビ番組</h3>
                 <p><a target="_blank" href=""><strong style="
-                    color: lightgreen;">Paradise</strong></a>&nbsp TVショー &nbsp 2025</p>
+                    color: lightgreen;">Paradise</strong></a>&nbsp テレビ番組 &nbsp 2025</p>
         </section>
 
 
