--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <nav class="nav-list">
     <ul>
         <li><a href="#about">Biography</a></li>
-        <li><a href="#reel">Demoreel</a></li>
+        <!-- <li><a href="#reel">Demoreel</a></li> -->
         <li><a href="#work">Work</a></li>
         <li><a href="#contact">Contacts</a></li>
     </ul>
@@ -86,7 +86,7 @@ Followed by numerous successful films, Hank continues to make an impact in the w
 
 
 
-        <section class="video-section" id="reel">
+        <!-- <section class="video-section" id="reel">
             <video class="video" controls poster="img/4.jpg">
                 <source src="movie.mp4" type="video/mp4">
                 Your browser does not support the video tag.
@@ -94,7 +94,7 @@ Followed by numerous successful films, Hank continues to make an impact in the w
               <p style="font-size: 12px; padding-top: 1vh;">Director's demoreel (Updated 2023)
               </p>
     
-        </section>
+        </section> -->
 
 <section class="contact-section" id="contact">
     <!-- <h2>Reach Out</h2> -->
