--- a/it/index.html
+++ b/it/index.html
@@ -44,7 +44,7 @@
 <nav class="nav-list">
     <ul>
         <li><a href="#about">Biografia</a></li>
-        <li><a href="#reel">Demoreel</a></li>
+        <!-- <li><a href="#reel">Demoreel</a></li> -->
         <li><a href="#work">Lavoro</a></li>
         <li><a href="#contact">Contatti</a></li>
     </ul>
@@ -85,7 +85,7 @@
 
 
 
-        <section class="video-section" id="reel">
+        <!-- <section class="video-section" id="reel">
             <video class="video" controls poster="/img/4.jpg">
                 <source src="movie.mp4" type="video/mp4">
                 Your browser does not support the video tag.
@@ -93,7 +93,7 @@
               <p style="font-size: 12px; padding-top: 1vh;">Demoreel del direttore (Aggiornato al 2023)
               </p>
     
-        </section>
+        </section> -->
 
 <section class="contact-section" id="contact">
     <!-- <h2>Reach Out</h2> -->
