--- a/ua/index.html
+++ b/ua/index.html
@@ -42,7 +42,7 @@
 <nav class="nav-list">
     <ul>
         <li><a href="#about">Біографія</a></li>
-        <li><a href="#reel">Деморил</a></li>
+        <!-- <li><a href="#reel">Деморил</a></li> -->
         <li><a href="#work">Роботи</a></li>
         <li><a href="#contact">Контакти</a></li>
     </ul>
@@ -83,7 +83,7 @@
 
 
 
-        <section class="video-section" id="reel">
+        <!-- <section class="video-section" id="reel">
             <video class="video" controls poster="/img/4.jpg">
                 <source src="movie.mp4" type="video/mp4">
                 Your browser does not support the video tag.
@@ -91,7 +91,7 @@
               <p style="font-size: 12px; padding-top: 1vh;">Режисерський деморолик (оновлено у 2023 році)
               </p>
     
-        </section>
+        </section> -->
 
 <section class="contact-section" id="contact">
     <!-- <h2>Reach Out</h2> -->
