--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
 </head>
 <body>
 
+    <div class="loader-overlay" id="loaderOverlay">
+        <div class="loader"></div>
+        <p>Loading...</p>
+    </div>
+
     <section class="hero" id="header-background">
         <div class="hero-area">
         <div class="hero-text">
