--- a/index.html
+++ b/index.html
@@ -63,12 +63,11 @@ Followed by numerous successful films, Hank continues to make an impact in the w
 
     <section id="work">
                 <h3>Film Work</h3>
-                <p><a target="_blank" href=""><strong style="
-                    color: lightgreen;">Greatest Film Ever Made</strong></a>&nbsp feature film &nbsp 2024</p>
-    
-                <p><a target="_blank" href=""><strong style="
-                color: lightgreen;">The Man</strong></a>&nbsp feature film &nbsp 2024</p>
-
+                <div class="coming-soon">
+                    <p>Releasing Soon</p>
+                <p><a target="_blank" href=""><strong>Greatest Film Ever Made</strong></a>&nbsp feature film &nbsp 2024</p>
+                <p><a target="_blank" href=""><strong>The Man</strong></a>&nbsp feature film &nbsp 2024</p>
+            </div>
                 <p><a target="_blank" href="https://www.imdb.com/title/tt18765996"><strong>Osaka</strong></a>&nbsp feature film &nbsp 2024</p>
                 <p><a target="_blank" href="https://www.imdb.com/title/tt23809464"><strong>Following</strong></a>&nbsp feature film &nbsp 2023</p>
                 <p><a target="_blank" href="https://www.imdb.com/title/tt22499822"><strong>Spooked</strong></a>&nbsp feature film &nbsp 2022</p>
@@ -81,8 +80,7 @@ Followed by numerous successful films, Hank continues to make an impact in the w
                 <p><a target="_blank" href="https://www.imdb.com/title/tt5191438"><strong>Outsiders</strong></a>&nbsp feature film &nbsp 2015</p>
 
                 <h3>TV Work</h3>
-                <p><a target="_blank" href=""><strong style="
-                    color: lightgreen;">Paradise</strong></a>&nbsp TV &nbsp 2025</p>
+                <p><a target="_blank" href=""><strong>Paradise</strong></a>&nbsp TV &nbsp 2025</p>
         </section>
 
 
