--- a/index.html
+++ b/index.html
@@ -64,23 +64,25 @@ Followed by numerous successful films, Hank continues to make an impact in the w
     <section id="work">
                 <h3>Film Work</h3>
                 <div class="coming-soon">
-                    <p>Releasing Soon</p>
-                <p><a target="_blank" href=""><strong>Greatest Film Ever Made</strong></a>&nbsp feature film &nbsp 2024</p>
-                <p><a target="_blank" href=""><strong>The Man</strong></a>&nbsp feature film &nbsp 2024</p>
+                    <p style="margin-bottom: 2vh;">Filming & Releasing Soon</p>
+                <p><a target="_blank" href=""><strong>The Greatest Film Ever Made</strong></a>&nbsp2024</p>
+                <p><a target="_blank" href=""><strong>Outsiders</strong></a>&nbsp2024</p>
+                <p><a target="_blank" href=""><strong>The Man</strong></a>&nbsp2024</p>
+
             </div>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt18765996"><strong>Osaka</strong></a>&nbsp feature film &nbsp 2024</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt23809464"><strong>Following</strong></a>&nbsp feature film &nbsp 2023</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt22499822"><strong>Spooked</strong></a>&nbsp feature film &nbsp 2022</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt21375000"><strong>Love in the City</strong></a>&nbsp feature film &nbsp 2022</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt13588604"><strong>I See Darkness</strong></a>&nbsp feature film &nbsp 2022</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt13141604"><strong>The Ritual</strong></a>&nbsp feature film &nbsp 2021</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt9193890"><strong>Honey & Wine</strong></a>&nbsp feature film &nbsp 2020</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt5374002"><strong>The Job</strong></a>&nbsp feature film &nbsp 2017</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt5238824"><strong>Despair</strong></a>&nbsp feature film &nbsp 2017</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt5191438"><strong>Outsiders</strong></a>&nbsp feature film &nbsp 2015</p>
+                <p><a target="_blank" href="https://www.imdb.com/title/tt18765996"><strong>Osaka</strong></a>&nbsp2024</p>
+                <p><a target="_blank" href="https://www.imdb.com/title/tt23809464"><strong>Following</strong></a>&nbsp2023</p>
+                <p><a target="_blank" href="https://www.imdb.com/title/tt22499822"><strong>Spooked</strong></a>&nbsp2022</p>
+                <p><a target="_blank" href="https://www.imdb.com/title/tt21375000"><strong>Love in the City</strong></a>&nbsp2022</p>
+                <p><a target="_blank" href="https://www.imdb.com/title/tt13588604"><strong>I See Darkness</strong></a>&nbsp2022</p>
+                <p><a target="_blank" href="https://www.imdb.com/title/tt13141604"><strong>The Ritual</strong></a>&nbsp2021</p>
+                <p><a target="_blank" href="https://www.imdb.com/title/tt9193890"><strong>Honey & Wine</strong></a>&nbsp2020</p>
+                <p><a target="_blank" href="https://www.imdb.com/title/tt5374002"><strong>The Job</strong></a>&nbsp2017</p>
+                <p><a target="_blank" href="https://www.imdb.com/title/tt5238824"><strong>Despair</strong></a>&nbsp2017</p>
+                <p><a target="_blank" href="https://www.imdb.com/title/tt5191438"><strong>Outsiders</strong></a>&nbsp2015</p>
 
                 <h3>TV Work</h3>
-                <p><a target="_blank" href=""><strong>Paradise</strong></a>&nbsp TV &nbsp 2025</p>
+                <p><a target="_blank" href=""><strong>Paradise</strong></a>&nbsp2025</p>
         </section>
 
 
