--- a/it/index.html
+++ b/it/index.html
@@ -59,29 +59,30 @@
     Hank Orion è un regista di origine ucraina noto per i suoi lungometraggi indipendenti. Cresciuto in Italia, ha affinato le sue capacità artistiche nella pittura prima di perseguire la sua passione per il cinema a Londra e poi a Los Angeles.<br><br> Iniziando come direttore della fotografia, i primi lavori di Hank nei video musicali hanno plasmato il suo stile e la sua capacità di prosperare sotto pressione. A 24 anni ha debuttato alla regia con "Outsiders", seguito da "Despair" e "The Job" nel 2017. Seguito da numerosi film di successo, Hank continua ad avere un impatto nel mondo del cinema indipendente.
 <br><br>Nel 2020, Hank ha lanciato <a target="_blank" href="https://indiefilmclasses.com/">Indie Film Classes</a>, ispirando innumerevoli registi indipendenti in tutto il mondo.</section>
 
-    <section id="work">
-                <h3>Lavoro Cinematografico</h3>
-                <p><a target="_blank" href=""><strong style="
-                    color: lightgreen;">Greatest Film Ever Made</strong></a>&nbsp lungometraggio &nbsp 2024</p>
-    
-                <p><a target="_blank" href=""><strong style="
-                color: lightgreen;">The Man</strong></a>&nbsp lungometraggio &nbsp 2024</p>
+        <section id="work">
+            <h3>Lavoro Cinematografico</h3>
+            <div class="coming-soon">
+                <p style="margin-bottom: 2vh;">Attualmente in Ripresa & Prossima Uscita</p>
+            <p><a target="_blank" href=""><strong>The Greatest Film Ever Made</strong></a>&nbsp2024</p>
+            <p><a target="_blank" href=""><strong>Outsiders</strong></a>&nbsp2024</p>
+            <p><a target="_blank" href=""><strong>The Man</strong></a>&nbsp2024</p>
 
-                <p><a target="_blank" href="https://www.imdb.com/title/tt18765996"><strong>Osaka</strong></a>&nbsp flungometraggio &nbsp 2024</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt23809464"><strong>Following</strong></a>&nbsp lungometraggio &nbsp 2023</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt22499822"><strong>Spooked</strong></a>&nbsp lungometraggio &nbsp 2022</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt21375000"><strong>Love in the City</strong></a>&nbsp lungometraggio &nbsp 2022</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt13588604"><strong>I See Darkness</strong></a>&nbsp lungometraggio &nbsp 2022</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt13141604"><strong>The Ritual</strong></a>&nbsp lungometraggio &nbsp 2021</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt9193890"><strong>Honey & Wine</strong></a>&nbsp lungometraggio &nbsp 2020</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt5374002"><strong>The Job</strong></a>&nbsp lungometraggio &nbsp 2017</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt5238824"><strong>Despair</strong></a>&nbsp lungometraggio &nbsp 2017</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt5191438"><strong>Outsiders</strong></a>&nbsp lungometraggio &nbsp 2015</p>
+        </div>
+            <p><a target="_blank" href="https://www.imdb.com/title/tt18765996"><strong>Osaka</strong></a>&nbsp2024</p>
+            <p><a target="_blank" href="https://www.imdb.com/title/tt23809464"><strong>Following</strong></a>&nbsp2023</p>
+            <p><a target="_blank" href="https://www.imdb.com/title/tt22499822"><strong>Spooked</strong></a>&nbsp2022</p>
+            <p><a target="_blank" href="https://www.imdb.com/title/tt21375000"><strong>Love in the City</strong></a>&nbsp2022</p>
+            <p><a target="_blank" href="https://www.imdb.com/title/tt13588604"><strong>I See Darkness</strong></a>&nbsp2022</p>
+            <p><a target="_blank" href="https://www.imdb.com/title/tt13141604"><strong>The Ritual</strong></a>&nbsp2021</p>
+            <p><a target="_blank" href="https://www.imdb.com/title/tt9193890"><strong>Honey & Wine</strong></a>&nbsp2020</p>
+            <p><a target="_blank" href="https://www.imdb.com/title/tt5374002"><strong>The Job</strong></a>&nbsp2017</p>
+            <p><a target="_blank" href="https://www.imdb.com/title/tt5238824"><strong>Despair</strong></a>&nbsp2017</p>
+            <p><a target="_blank" href="https://www.imdb.com/title/tt5191438"><strong>Outsiders</strong></a>&nbsp2015</p>
 
-                <h3>Lavoro in TV</h3>
-                <p><a target="_blank" href=""><strong style="
-                    color: lightgreen;">Paradise</strong></a>&nbsp Programma TV &nbsp 2025</p>
-        </section>
+            <h3>Lavoro in TV</h3>
+            <p><a target="_blank" href=""><strong>Paradise</strong></a>&nbsp2025</p>
+    </section>
+
 
 
 
