--- a/jp/index.html
+++ b/jp/index.html
@@ -83,6 +83,31 @@
                     color: lightgreen;">Paradise</strong></a>&nbsp テレビ番組 &nbsp 2025</p>
         </section>
 
+        <section id="work">
+            <h3>映画作品</h3>
+            <div class="coming-soon">
+                <p style="margin-bottom: 2vh;">現在撮影中＆近日公開予定</p>
+            <p><a target="_blank" href=""><strong>The Greatest Film Ever Made</strong></a>&nbsp2024</p>
+            <p><a target="_blank" href=""><strong>Outsiders</strong></a>&nbsp2024</p>
+            <p><a target="_blank" href=""><strong>The Man</strong></a>&nbsp2024</p>
+
+        </div>
+            <p><a target="_blank" href="https://www.imdb.com/title/tt18765996"><strong>Osaka</strong></a>&nbsp2024</p>
+            <p><a target="_blank" href="https://www.imdb.com/title/tt23809464"><strong>Following</strong></a>&nbsp2023</p>
+            <p><a target="_blank" href="https://www.imdb.com/title/tt22499822"><strong>Spooked</strong></a>&nbsp2022</p>
+            <p><a target="_blank" href="https://www.imdb.com/title/tt21375000"><strong>Love in the City</strong></a>&nbsp2022</p>
+            <p><a target="_blank" href="https://www.imdb.com/title/tt13588604"><strong>I See Darkness</strong></a>&nbsp2022</p>
+            <p><a target="_blank" href="https://www.imdb.com/title/tt13141604"><strong>The Ritual</strong></a>&nbsp2021</p>
+            <p><a target="_blank" href="https://www.imdb.com/title/tt9193890"><strong>Honey & Wine</strong></a>&nbsp2020</p>
+            <p><a target="_blank" href="https://www.imdb.com/title/tt5374002"><strong>The Job</strong></a>&nbsp2017</p>
+            <p><a target="_blank" href="https://www.imdb.com/title/tt5238824"><strong>Despair</strong></a>&nbsp2017</p>
+            <p><a target="_blank" href="https://www.imdb.com/title/tt5191438"><strong>Outsiders</strong></a>&nbsp2015</p>
+
+            <h3>テレビ番組</h3>
+            <p><a target="_blank" href=""><strong>Paradise</strong></a>&nbsp2025</p>
+    </section>
+
+
 
 
         <!-- <section class="video-section" id="reel">
