--- a/ua/index.html
+++ b/ua/index.html
@@ -57,29 +57,32 @@
 Хенк Оріон - кінорежисер українського походження, відомий своїми авторськими фільмами. Виріс в Італії, де він вдосконалював свої художні навички в області живопису, перш ніж перейти до кіно в Лондоні, а пізніше у Лос-Анджелесі. <br><br> Починаючи як оператор, рання робота Хенка в музичних кліпах сформувала його стиль і здатність процвітати під тиском. У 24 роки він дебютував як режисер стрічкою "Аутсайдери", за якою послідували "Відчай" та "Робота" у 2017 році. Після численних успішних фільмів Хенк продовжує впливати на світ незалежного кіно. 
 <br><br>У 2020 році Хенк започаткував курси інді-кіно <a target="_blank" href="https://indiefilmclasses.com/">Indie Film Classes</a>, які надихають незалежних кінематографістів по всьому світу. </section>
 
-    <section id="work">
-                <h3>Робота В Кіно</h3>
-                <p><a target="_blank" href=""><strong style="
-                    color: lightgreen;">Greatest Film Ever Made</strong></a>&nbsp художній фільм &nbsp 2024</p>
-    
-                <p><a target="_blank" href=""><strong style="
-                color: lightgreen;">The Man</strong></a>&nbsp художній фільм &nbsp 2024</p>
 
-                <p><a target="_blank" href="https://www.imdb.com/title/tt18765996"><strong>Осака</strong></a>&nbsp художній фільм &nbsp 2024</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt23809464"><strong>Слідкуй</strong></a>&nbsp художній фільм &nbsp 2023</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt22499822"><strong>Наляканий</strong></a>&nbsp художній фільм &nbsp 2022</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt21375000"><strong>Любов у місті</strong></a>&nbsp художній фільм &nbsp 2022</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt13588604"><strong>Я бачу темряву</strong></a>&nbsp художній фільм &nbsp 2022</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt13141604"><strong>Ритуал</strong></a>&nbsp художній фільм &nbsp 2021</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt9193890"><strong>Мед і вино</strong></a>&nbsp художній фільм &nbsp 2020</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt5374002"><strong>Робота</strong></a>&nbsp художній фільм &nbsp 2017</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt5238824"><strong>Відчай</strong></a>&nbsp художній фільм &nbsp 2017</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt5191438"><strong>Аутсайдери</strong></a>&nbsp художній фільм &nbsp 2015</p>
+        <section id="work">
+            <h3>Робота В Кіно</h3>
+            <div class="coming-soon">
+                <p style="margin-bottom: 2vh;">
+                    Зйомка і Випуск Незабаром</p>
+            <p><a target="_blank" href=""><strong>The Greatest Film Ever Made</strong></a>&nbsp2024</p>
+            <p><a target="_blank" href=""><strong>Outsiders</strong></a>&nbsp2024</p>
+            <p><a target="_blank" href=""><strong>The Man</strong></a>&nbsp2024</p>
 
-                <h3>Робота На Телебаченні</h3>
-                <p><a target="_blank" href=""><strong style="
-                    color: lightgreen;">Paradise</strong></a>&nbsp Телевізійне Шоу &nbsp 2025</p>
-        </section>
+        </div>
+            <p><a target="_blank" href="https://www.imdb.com/title/tt18765996"><strong>Osaka</strong></a>&nbsp2024</p>
+            <p><a target="_blank" href="https://www.imdb.com/title/tt23809464"><strong>Following</strong></a>&nbsp2023</p>
+            <p><a target="_blank" href="https://www.imdb.com/title/tt22499822"><strong>Spooked</strong></a>&nbsp2022</p>
+            <p><a target="_blank" href="https://www.imdb.com/title/tt21375000"><strong>Love in the City</strong></a>&nbsp2022</p>
+            <p><a target="_blank" href="https://www.imdb.com/title/tt13588604"><strong>I See Darkness</strong></a>&nbsp2022</p>
+            <p><a target="_blank" href="https://www.imdb.com/title/tt13141604"><strong>The Ritual</strong></a>&nbsp2021</p>
+            <p><a target="_blank" href="https://www.imdb.com/title/tt9193890"><strong>Honey & Wine</strong></a>&nbsp2020</p>
+            <p><a target="_blank" href="https://www.imdb.com/title/tt5374002"><strong>The Job</strong></a>&nbsp2017</p>
+            <p><a target="_blank" href="https://www.imdb.com/title/tt5238824"><strong>Despair</strong></a>&nbsp2017</p>
+            <p><a target="_blank" href="https://www.imdb.com/title/tt5191438"><strong>Outsiders</strong></a>&nbsp2015</p>
+
+            <h3>Робота На Телебаченні</h3>
+            <p><a target="_blank" href=""><strong>Paradise</strong></a>&nbsp2025</p>
+    </section>
+
 
 
 
