--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
     </section>
     </div>
     
-
     <section class="about-section" id="about">
+        <img class="about-image" src="img/hank orion.jpg" alt="">
+
 <p>
     Hank Orion is a Ukrainian-born filmmaker renowned for his indie feature films. Raised in Italy, he honed his artistic skills in painting before pursuing his passion for filmmaking in London and later Los Angeles. <br><br> Starting as a cinematographer, Hank's early work in music videos shaped his style and ability to thrive under pressure. At 24, he made his directorial debut with "Outsiders," followed by "Despair" and "The Job" in 2017. 
 Followed by numerous successful films, Hank continues to make an impact in the world of independent cinema.
