--- a/it/index.html
+++ b/it/index.html
@@ -55,6 +55,8 @@
     
 
     <section class="about-section" id="about">
+        <img class="about-image" src="/img/hank orion.jpg" alt="">
+
 <p>
     Hank Orion è un regista di origine ucraina noto per i suoi lungometraggi indipendenti. Cresciuto in Italia, ha affinato le sue capacità artistiche nella pittura prima di perseguire la sua passione per il cinema a Londra e poi a Los Angeles.<br><br> Iniziando come direttore della fotografia, i primi lavori di Hank nei video musicali hanno plasmato il suo stile e la sua capacità di prosperare sotto pressione. A 24 anni ha debuttato alla regia con "Outsiders", seguito da "Despair" e "The Job" nel 2017. Seguito da numerosi film di successo, Hank continua ad avere un impatto nel mondo del cinema indipendente.
 <br><br>Nel 2020, Hank ha lanciato <a target="_blank" href="https://indiefilmclasses.com/">Indie Film Classes</a>, ispirando innumerevoli registi indipendenti in tutto il mondo.</section>
