--- a/jp/index.html
+++ b/jp/index.html
@@ -55,33 +55,12 @@
     
 
     <section class="about-section" id="about">
+        <img class="about-image" src="/img/hank orion.jpg" alt="">
+
 <p>
     長編インディーズ映画で有名なウクライナ出身の映画監督。イタリアで育ち、絵画で芸術的才能を磨いた後、ロンドンとロサンゼルスで映画製作に情熱を注ぐ。<br><br>撮影監督としてスタートしたハンクは、初期のミュージックビデオの仕事で、彼のスタイルとプレッシャーの下で成功する能力を形成した。24歳で『アウトサイダーズ』で監督デビューを果たし、2017年には『絶望』と『ザ・ジョブ』を発表。数々のヒット作に続き、ハンクはインディペンデント映画の世界に衝撃を与え続けている。
     <br><br>2020年、ハンクは<a target="_blank" href="https://indiefilmclasses.com/">Indie Film Classes</a>を立ち上げ、世界中の無数の独立映画製作者にインスピレーションを与えました。</section>
 
-    <section id="work">
-                <h3>映画作品</h3>
-                <p><a target="_blank" href=""><strong style="
-                    color: lightgreen;">Greatest Film Ever Made</strong></a>&nbsp 映画 &nbsp 2024</p>
-    
-                <p><a target="_blank" href=""><strong style="
-                color: lightgreen;">The Man</strong></a>&nbsp 映画 &nbsp 2024</p>
-
-                <p><a target="_blank" href="https://www.imdb.com/title/tt18765996"><strong>Osaka</strong></a>&nbsp 映画 &nbsp 2024</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt23809464"><strong>Following</strong></a>&nbsp 映画 &nbsp 2023</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt22499822"><strong>Spooked</strong></a>&nbsp 映画 &nbsp 2022</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt21375000"><strong>Love in the City</strong></a>&nbsp 映画 &nbsp 2022</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt13588604"><strong>I See Darkness</strong></a>&nbsp 映画 &nbsp 2022</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt13141604"><strong>The Ritual</strong></a>&nbsp 映画 &nbsp 2021</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt9193890"><strong>Honey & Wine</strong></a>&nbsp 映画 &nbsp 2020</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt5374002"><strong>The Job</strong></a>&nbsp 映画 &nbsp 2017</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt5238824"><strong>Despair</strong></a>&nbsp 映画 &nbsp 2017</p>
-                <p><a target="_blank" href="https://www.imdb.com/title/tt5191438"><strong>Outsiders</strong></a>&nbsp 映画 &nbsp 2015</p>
-
-                <h3>テレビ番組</h3>
-                <p><a target="_blank" href=""><strong style="
-                    color: lightgreen;">Paradise</strong></a>&nbsp テレビ番組 &nbsp 2025</p>
-        </section>
 
         <section id="work">
             <h3>映画作品</h3>
