--- a/ua/index.html
+++ b/ua/index.html
@@ -53,6 +53,8 @@
     
 
     <section class="about-section" id="about">
+        <img class="about-image" src="/img/hank orion.jpg" alt="">
+
 <p>
 Хенк Оріон - кінорежисер українського походження, відомий своїми авторськими фільмами. Виріс в Італії, де він вдосконалював свої художні навички в області живопису, перш ніж перейти до кіно в Лондоні, а пізніше у Лос-Анджелесі. <br><br> Починаючи як оператор, рання робота Хенка в музичних кліпах сформувала його стиль і здатність процвітати під тиском. У 24 роки він дебютував як режисер стрічкою "Аутсайдери", за якою послідували "Відчай" та "Робота" у 2017 році. Після численних успішних фільмів Хенк продовжує впливати на світ незалежного кіно. 
 <br><br>У 2020 році Хенк започаткував курси інді-кіно <a target="_blank" href="https://indiefilmclasses.com/">Indie Film Classes</a>, які надихають незалежних кінематографістів по всьому світу. </section>
