--- a/index.html
+++ b/index.html
@@ -100,7 +100,9 @@ Followed by numerous successful films, Hank continues to make an impact in the w
 
 <section class="contact-section" id="contact">
     <!-- <h2>Reach Out</h2> -->
-    <p style="font-weight: 600;">agent@hankorion.com</p>
+    <p>Not work related:</p><p style="font-weight: 600;">hank@hankorion.com</p>
+   <br>
+    <p>Work related:</p><p style="font-weight: 600;">agent@hankorion.com</p>
     <p style="font-size: 16px; padding-top: 20px;">Please don't send any unsolicited material including screenplays, videos, concepts, film screeners, story ideas etc. <br><br> Thank you for understanding.</p>
     
     <ul class="social-icons">
