--- a/it/index.html
+++ b/it/index.html
@@ -27,6 +27,14 @@
 </head>
 <body>
 
+    <nav class="nav-list">
+        <ul>
+            <li><a href="#about">Biografia</a></li>
+            <li><a href="#work">Lavoro</a></li>
+            <li><a href="#contact">Contatti</a></li>
+        </ul>
+    </nav>
+    
     <section class="hero" id="header-background">
         <div class="hero-area">
         <div class="hero-text">
@@ -41,14 +49,13 @@
     <a href="/it" class="language-link">Italiano</a>
 </div>
 <script src="/script.js"></script>
-<nav class="nav-list">
+<!-- <nav class="nav-list">
     <ul>
         <li><a href="#about">Biografia</a></li>
-        <!-- <li><a href="#reel">Demoreel</a></li> -->
         <li><a href="#work">Lavoro</a></li>
         <li><a href="#contact">Contatti</a></li>
     </ul>
-</nav>
+</nav> -->
 
     </section>
     </div>
