--- a/ua/index.html
+++ b/ua/index.html
@@ -24,7 +24,13 @@
 <!-- <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:wght@100;200;300;400;500;600;700;800;900" rel="stylesheet"> -->
 </head>
 <body>
-
+    <nav class="nav-list">
+        <ul>
+            <li><a href="#about">Біографія</a></li>
+            <li><a href="#work">Роботи</a></li>
+            <li><a href="#contact">Контакти</a></li>
+        </ul>
+    </nav>
     <section class="hero" id="header-background">
         <div class="hero-area">
         <div class="hero-text">
@@ -39,14 +45,13 @@
     <a href="/it" class="language-link">Italiano</a>
 </div>
 <script src="/script.js"></script>
-<nav class="nav-list">
+<!-- <nav class="nav-list">
     <ul>
         <li><a href="#about">Біографія</a></li>
-        <!-- <li><a href="#reel">Деморил</a></li> -->
         <li><a href="#work">Роботи</a></li>
         <li><a href="#contact">Контакти</a></li>
     </ul>
-</nav>
+</nav> -->
 
     </section>
     </div>
