--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
 </head>
 <body>
 
+    <nav class="nav-list">
+        <ul>
+            <li><a href="#about">Biography</a></li>
+            <li><a href="#work">Work</a></li>
+            <li><a href="#contact">Contacts</a></li>
+        </ul>
+    </nav>
 
     <section class="hero" id="header-background">
         <div class="hero-area">
@@ -42,14 +49,13 @@
     <a href="/it" class="language-link">Italiano</a>
 </div>
 <script src="script.js"></script>
-<nav class="nav-list">
+<!-- <nav class="nav-list">
     <ul>
         <li><a href="#about">Biography</a></li>
-        <!-- <li><a href="#reel">Demoreel</a></li> -->
         <li><a href="#work">Work</a></li>
         <li><a href="#contact">Contacts</a></li>
     </ul>
-</nav>
+</nav> -->
 
     </section>
     </div>
