--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 Followed by numerous successful films, Hank continues to make an impact in the world of independent cinema.
 <br><br> In 2020, Hank launched <a target="_blank" href="https://indiefilmclasses.com/">Indie Film Classes</a>, inspiring countless independent filmmakers worldwide.    </section>
 
-    <section id="work">
+    <section class="work-section" id="work">
                 <h3>Film Work</h3>
                 <div class="coming-soon">
                     <p style="margin-bottom: 2vh;">Filming & Releasing Soon</p>
