--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </section>
     </div>
     
-    <section class="about-section" id="about">
+    <section class="container" id="about">
         <img class="about-image" src="img/hank orion.jpg" alt="">
 
 <p>
@@ -71,7 +71,7 @@
 Followed by numerous successful films, Hank continues to make an impact in the world of independent cinema.
 <br><br> In 2020, Hank launched <a target="_blank" href="https://indiefilmclasses.com/">Indie Film Classes</a>, inspiring countless independent filmmakers worldwide.    </section>
 
-    <section class="work-section" id="work">
+    <section class="container" id="work">
                 <h3>Film Work</h3>
                 <div class="coming-soon">
                     <p style="margin-bottom: 2vh;">Filming & Releasing Soon</p>
@@ -107,7 +107,7 @@ Followed by numerous successful films, Hank continues to make an impact in the w
     
         </section> -->
 
-<section class="contact-section" id="contact">
+<section class="container" id="contact">
     <!-- <h2>Reach Out</h2> -->
     <p>Not work related:</p><p style="font-weight: 600;">hank@hankorion.com</p>
    <br>
@@ -123,6 +123,8 @@ Followed by numerous successful films, Hank continues to make an impact in the w
     </ul>
 
 </section>
+
+
 
 <!-- Back to Top Button -->
 <button onclick="topFunction()" id="backToTopBtn" title="Go to top">Top</button>
